--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,8 @@ a:hover {
 }
 
 #frame {
-  width: 95%;
+  display: grid;
+  grid-template-columns: 35% 1fr;
   min-width: 360px;
   max-width: 100%;
   height: 92vh;
@@ -47,7 +48,6 @@ a:hover {
   float: left;
   min-width: 280px;
   max-width: 340px;
-  width: 40%;
   height: 100%;
   background: #2c3e50;
   color: #f5f5f5;
@@ -161,8 +161,6 @@ a:hover {
 }
 #frame #sidepanel #profile .wrap #status-options {
   position: absolute;
-  opacity: 0;
-  visibility: hidden;
   width: 150px;
   margin: 70px 0 0 0;
   border-radius: 6px;
@@ -354,9 +352,14 @@ a:hover {
   border: 1px solid #95a5a6;
 }
 #frame #sidepanel #profile .wrap #expanded {
-  padding: 100px 0 0 0;
+  padding: 5px 10px 0 10px;
   display: block;
   line-height: initial !important;
+  position: absolute;
+  z-index: 9999;
+  background: #435f7a;
+  top: 80px;
+  border-radius: 6px;
 }
 #frame #sidepanel #profile .wrap #expanded label {
   float: left;
@@ -367,7 +370,7 @@ a:hover {
 #frame #sidepanel #profile .wrap #expanded input {
   border: none;
   margin-bottom: 6px;
-  background: #32465a;
+  background: #435f7a;
   border-radius: 3px;
   color: #f5f5f5;
   padding: 7px;
@@ -587,7 +590,6 @@ a:hover {
 }
 #frame .content {
   float: right;
-  width: 60%;
   height: 100%;
   overflow: hidden;
   position: relative;
@@ -600,7 +602,6 @@ a:hover {
 }
 @media screen and (min-width: 900px) {
   #frame .content {
-    /*width: calc(100% - 340px);*/
   }
 }
 #frame .content .contact-profile {
@@ -638,11 +639,7 @@ a:hover {
   overflow-y: scroll;
   overflow-x: hidden; */
 }
-@media screen and (max-width: 735px) {
-  #frame .content .messages {
-    max-height: calc(100% - 105px);
-  }
-}
+
 #frame .content .messages::-webkit-scrollbar {
   width: 8px;
   background: transparent;
